--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head th:include="~{fragments/header.html :: head}">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Registro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </head>
@@ -13,13 +13,13 @@
     <form class="row g-3" th:action="@{/guardar}" method="post" th:object="${usuario}">
         <div class="col-md-5">
             <label for="validationServer01" class="form-label">Nombre y Apellido</label>
-            <input type="text" class="form-control" id="validationServer01" placeholder="Manuel Castellanos López" required>
+            <input type="text" th:field="*{nombreApellido}" class="form-control" id="validationServer01" placeholder="Manuel Castellanos López" required>
         </div>
         <div class="col-md-4">
             <label for="validationServerUsername" class="form-label">Usuario</label>
             <div class="input-group has-validation">
                 <span class="input-group-text" id="inputGroupPrepend3">@</span>
-                <input type="text" class="form-control" id="validationServerUsername" placeholder="username" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
+                <input type="text" th:field="*{userName}" class="form-control" id="validationServerUsername" placeholder="username" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
             </div>
         </div>
         <div class="col-md-3">
@@ -29,7 +29,7 @@
         </div>
         <div class="col-md-5">
             <label for="validationServer04" class="form-label">Email</label>
-            <input type="email" class="form-control" id="validationServer04" placeholder="example@domain.com" aria-describedby="validationServer04Feedback" required>
+            <input type="email" th:field="*{email}" class="form-control" id="validationServer04" placeholder="example@domain.com" aria-describedby="validationServer04Feedback" required>
         </div>
         <div class="col-md-4">
             <label for="validationServer03" class="form-label">Contraseña</label>
